--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
@@ -22,9 +24,15 @@
             </intent-filter>
         </activity>
         <activity android:name="com.miempresa.tecfoodv5.Activitys.LoginRegister.RegisterPhoneActivity"></activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".Activitys.MainActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         </activity>
+        <activity android:name=".Activitys.Restaurante_Uni"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
