--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,21 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.github.mmin18:realtimeblurview:1.2.1'
+    implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.7'
 
+
     implementation 'jp.wasabeef:picasso-transformations:2.4.0'
     // filtros de Gpu
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
+
+    //Google Dependecias
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
