--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.miempresa.tecfoodv5">
-
-    <!--Permissions-->
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -14,74 +14,63 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tecfoodv5">
+        <activity android:name=".Activitys.LoginRegister.RegisterPerfilActivity"></activity>
+        <activity android:name=".Activitys.LoginRegister.RegisterFormActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCWSfM5QIOM_t_xs546tQIN4dl_eZlOpe4" />
-
-        <!--Actividad Notificaciones-->
-        <activity android:name=".Activitys.ItemsMenuLateral.MenuNotificaciones.MenuLat_Notificaciones"
+            android:value="AIzaSyCWSfM5QIOM_t_xs546tQIN4dl_eZlOpe4" /> <!-- Actividad Notificaciones -->
+        <activity
+            android:name=".Activitys.ItemsMenuLateral.MenuNotificaciones.MenuLat_Notificaciones"
             android:parentActivityName=".Activitys.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activitys.MainActivity" />
-        </activity>
-
-        <!--Actividad dsadasdsa-->
-        <activity android:name=".Activitys.ItemsMenuLateral.MenuInviteFriends.MenuLat_InvitaAmigos"
+        </activity> <!-- Actividad dsadasdsa -->
+        <activity
+            android:name=".Activitys.ItemsMenuLateral.MenuInviteFriends.MenuLat_InvitaAmigos"
             android:parentActivityName=".Activitys.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activitys.MainActivity" />
-        </activity>
-
-        <!--Actividad Informacion Tecfood-->
-        <activity android:name=".Activitys.ItemsMenuLateral.MenuInfoTecfood.MenuLat_InfoTecfood"
+        </activity> <!-- Actividad Informacion Tecfood -->
+        <activity
+            android:name=".Activitys.ItemsMenuLateral.MenuInfoTecfood.MenuLat_InfoTecfood"
             android:parentActivityName=".Activitys.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activitys.MainActivity" />
-        </activity>
-
-        <!--Actividad Direccion-->
-        <activity android:name=".Activitys.ItemsMenuLateral.MenuDireccion.MenuLat_Direccion"
+        </activity> <!-- Actividad Direccion -->
+        <activity
+            android:name=".Activitys.ItemsMenuLateral.MenuDireccion.MenuLat_Direccion"
             android:parentActivityName=".Activitys.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activitys.MainActivity" />
-        </activity>
-
-        <!--Actividad Afiliar Restaurante-->
-        <activity android:name=".Activitys.ItemsMenuLateral.MenuAfiliarRestaurante.MenuLat_AfiliarRestaurante"
+        </activity> <!-- Actividad Afiliar Restaurante -->
+        <activity
+            android:name=".Activitys.ItemsMenuLateral.MenuAfiliarRestaurante.MenuLat_AfiliarRestaurante"
             android:parentActivityName=".Activitys.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activitys.MainActivity" />
-        </activity>
-
-        <!--Actividad Login-->
-        <activity android:name="com.miempresa.tecfoodv5.Activitys.LoginRegister.LoginActivity">
+        </activity> <!-- Actividad Login -->
+        <activity android:name=".Activitys.LoginRegister.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--Actividad Registro Telefono-->
-        <activity android:name="com.miempresa.tecfoodv5.Activitys.LoginRegister.RegisterPhoneActivity"></activity>
-
-        <!--Actividad Principal-->
-        <activity android:name=".Activitys.MainActivity"></activity>
-
-
-        <!--Actividad Restaurante unico-->
-        <activity android:name=".Activitys.Restaurante_Uni"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"></activity>
+        </activity> <!-- Actividad Registro Telefono -->
+        <activity android:name=".Activitys.LoginRegister.RegisterPhoneActivity" /> <!-- Actividad Principal -->
+        <activity android:name=".Activitys.MainActivity" /> <!-- Actividad Restaurante unico -->
+        <activity
+            android:name=".Activitys.Restaurante_Uni"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
